--- a/templates/sidebar/participants.hbs
+++ b/templates/sidebar/participants.hbs
@@ -53,6 +53,7 @@
   {{!-- Dropzone overlay for drag and drop --}}
   <div class="chud-dropzone-overlay">
     <div class="chud-dropzone-message">
+      <i class="far fa-square-plus"></i>
       <p>{{localize "CHUD.strings.dropItem"}}</p>
     </div>
   </div>
