--- a/css/v2/sidebar/drag-and-drop.css
+++ b/css/v2/sidebar/drag-and-drop.css
@@ -1,8 +1,3 @@
-.conversation-sidebar .conversation-participants {
-  position: relative;
-  border-radius: 6px;
-}
-
 .conversation-sidebar .chud-dropzone-overlay {
   position: absolute;
   top: 0;
@@ -38,17 +33,16 @@
 }
 
 .conversation-sidebar .chud-dropzone-overlay .chud-dropzone-message {
-  background-color: var(--sidebar-background);
-  padding: 1rem 1.5rem;
-  border-radius: 4px;
-  box-shadow: 0 0 10px var(--color-shadow-dark);
-  backdrop-filter: blur(2px);
-  position: relative;
   max-width: 160px;
+}
+
+.conversation-sidebar .chud-dropzone-overlay .chud-dropzone-message > i {
+  font-size: 3rem;
 }
 
 .conversation-sidebar .chud-dropzone-overlay .chud-dropzone-message > p {
   margin: 0;
+  margin-top: 10px;
 }
 
 .conversation-sidebar .conversation-participants.active-dropzone ~ .chud-dropzone-overlay {
@@ -57,6 +51,6 @@
 }
 
 .conversation-sidebar .conversation-participants.active-dropzone > * {
-  opacity: 0.4;
+  opacity: 0.2;
   pointer-events: none;
 }
